testcases/compiler2015/Phase2/CompileError/naive2-5100309127-hetianxing.c
/*
 * conflicting type
 */
#include <stdio.h>
int b, c, d = 0 ,e = 0, f = 0;
char c;
int main() {
    int b;
}